[gd_scene load_steps=14 format=1]

[ext_resource path="res://rail.gd" type="Script" id=1]
[ext_resource path="res://bm_army.fnt" type="Font" id=2]
[ext_resource path="res://game_over.gd" type="Script" id=3]
[ext_resource path="res://blue_theme.thm" type="Theme" id=4]
[ext_resource path="res://icecube.png" type="Texture" id=5]
[ext_resource path="res://pointer.png" type="Texture" id=6]
[ext_resource path="res://ship.gd" type="Script" id=7]
[ext_resource path="res://ship.tex" type="Texture" id=8]
[ext_resource path="res://explosion.wav" type="Sample" id=9]
[ext_resource path="res://lose.wav" type="Sample" id=10]
[ext_resource path="res://shoot.wav" type="Sample" id=11]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -7.22003, 6.67838, -0.14109, -7.78726, 7.01479, 6.75534 )

[sub_resource type="SampleLibrary" id=2]

samples/explosion = { "db":0.0, "pitch":1.0, "sample":ExtResource( 9 ) }
samples/shoot = { "db":0.0, "pitch":1.0, "sample":ExtResource( 11 ) }
samples/lose = { "db":0.0, "pitch":1.0, "sample":ExtResource( 10 ) }

[node name="rail" type="Node2D"]

script/script = ExtResource( 1 )

[node name="hud" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="score" type="Label" parent="hud"]

margin/left = 35.0
margin/top = 4.0
margin/right = 80.0
margin/bottom = 18.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.462745, 0.733333, 1, 1 )
text = "65123"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="game_over" type="VBoxContainer" parent="hud"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
margin/left = 40.0
margin/top = 100.0
margin/right = 50.0
margin/bottom = 100.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
alignment = 1
script/script = ExtResource( 3 )

[node name="title" type="Label" parent="hud/game_over"]

margin/top = 332.0
margin/right = 510.0
margin/bottom = 344.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.0859375, 0.0859375, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "GAME OVER"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score" type="Label" parent="hud/game_over"]

margin/top = 348.0
margin/right = 510.0
margin/bottom = 360.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.333333, 0.560784, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Score"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score_value" type="Label" parent="hud/game_over"]

margin/top = 364.0
margin/right = 510.0
margin/bottom = 376.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.0859375, 0.0859375, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1000"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="high" type="Label" parent="hud/game_over"]

margin/top = 380.0
margin/right = 510.0
margin/bottom = 392.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.333333, 0.560784, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "High Score"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="high_value" type="Label" parent="hud/game_over"]

margin/top = 396.0
margin/right = 510.0
margin/bottom = 408.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.0859375, 0.0859375, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "10000"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="freeze_more" type="Button" parent="hud/game_over"]

margin/top = 412.0
margin/right = 510.0
margin/bottom = 428.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 4 )
toggle_mode = false
text = "Freeze More!"
icon = ExtResource( 5 )
flat = false

[node name="pointer" type="Sprite" parent="hud/game_over"]

transform/pos = Vector2( -50, -100 )
texture = ExtResource( 6 )
centered = false

[node name="ship" type="Area2D" parent="."]

transform/pos = Vector2( 100, 300 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 7 )

[node name="sprite" type="Sprite" parent="ship"]

transform/pos = Vector2( -0.37764, -0.39859 )
texture = ExtResource( 8 )
hframes = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ship"]

build_mode = 0
polygon = Vector2Array( -7.22003, 6.67838, -0.14109, -7.78726, 7.01479, 6.75534 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="explosion" type="Particles2D" parent="ship"]

config/amount = 32
config/lifetime = 2.0
config/emit_timeout = 2.0
config/emitting = false
config/explosiveness = 0.080226
config/texture = ExtResource( 5 )
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 152.501
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="sfx" type="SamplePlayer2D" parent="ship"]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 2
config/samples = SubResource( 2 )
config/pitch_random = 0.0

[node name="Camera2D" type="Camera2D" parent="."]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[connection signal="visibility_changed" from="hud/game_over" to="hud/game_over" method="_on_game_over_visibility_changed"]

[connection signal="pressed" from="hud/game_over/freeze_more" to="hud/game_over" method="_on_freeze_more_pressed"]

[connection signal="area_enter" from="ship" to="ship" method="_on_ship_area_enter"]


